--- a/style.css
+++ b/style.css
@@ -1,2 +1,68 @@
-﻿body {
+﻿html,body{
+	margin:0;
+	padding: 0;
+}
+
+
+body {
+	display: flex;
+
+}
+
+h1{
+	text-transform: uppercase; /* tout en majuscule */
+}
+
+nav
+{	
+	padding-top: 30px;
+	float: left;
+	background-color: #FF7043;
+	width: 20%;
+
+}
+
+h3, p  {
+	padding-left: 30px;
+	padding-right: 30px;
+
+}
+nav h1{
+	background-color: #BDBDBD;
+	text-align: center;
+	
+}
+.imgId{
+	display: flex;
+	width: 150px;
+	height: 150px; 
+	margin:auto;
+	border-radius: 200%;
+
+}
+#conteneur{
+	border:1px solid black;
+
+}
+
+#droite{
+
+	margin-left: 300px;
+	margin-top: 30px;
+	margin-right: 30px;
+	margin-bottom: 30px
+}
+
+header{
+
+}
+
+section h1{
+	padding-right: auto;
+border-bottom: 1px #FF7043 solid;
+	  }
+
+.formation{
+
+	
 }
