--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-﻿html,body{
+﻿ html,body{
 	margin:0;
 	padding: 0;
 }
 
 
 body {
-	display: flex;
+
 
 }
 
@@ -16,7 +16,6 @@ h1{
 nav
 {	
 	padding-top: 30px;
-	float: left;
 	background-color: #FF7043;
 	width: 20%;
 
@@ -42,19 +41,20 @@ nav h1{
 
 }
 #conteneur{
-	border:1px solid black;
+	border:1px solid blue;
+	display: flex;
+
+}
+.gauche {
 
 }
 
-#droite{
-
-	margin-left: 300px;
-	margin-top: 30px;
-	margin-right: 30px;
-	margin-bottom: 30px
-}
-
-header{
+.droite{
+	display: flex;
+	flex-direction: column;
+	border : 1px red solid;
+	margin : 30px;
+	padding-right: 10px;
 
 }
 
@@ -64,17 +64,14 @@ section h1{
 border-bottom: 1px #FF7043 solid;
 	  }
 
-.formation{
-
-	
-}
-
 ul {
 list-style-type: none;
 }
+
 li{
 	padding:20px;
 }
+
 .description{
 	margin-left: 300px;
 }
