DRY du css et html

--- a/style.css
+++ b/style.css
@@ -1,35 +1,22 @@
-﻿ html,body{
-	margin:0;
-	padding: 0;
+﻿body{
+margin: auto;
 }
-
-
-body {
-
-
-}
-
 h1{
 	text-transform: uppercase; /* tout en majuscule */
 }
 
-nav
-{	
+#conteneur{
+	/*A SUPPRIMER  border:1px solid blue; */
+	display: flex;
+	
+ /*flex-direction: column;*/
+}
+/*partie de gauche */
+
+.gauche {
 	padding-top: 30px;
 	background-color: #FF7043;
-	width: 20%;
-
-}
-
-h3, p  {
-	padding-left: 30px;
-	padding-right: 30px;
-
-}
-nav h1{
-	background-color: #BDBDBD;
-	text-align: center;
-	
+	flex:1;
 }
 
 .imgId{
@@ -38,31 +25,40 @@ nav h1{
 	height: 150px; 
 	margin:auto;
 	border-radius: 200%;
+}
+
+nav h1{
+	background-color: #BDBDBD;
+	text-align: center;
+}
+
+h3, p  {
+	padding-left: 30px;
+	padding-right: 30px;
 
 }
-#conteneur{
-	border:1px solid blue;
-	display: flex;
 
-}
-.gauche {
-
-}
+/*Partie de droite */
 
 .droite{
-	display: flex;
-	flex-direction: column;
-	border : 1px red solid;
-	margin : 30px;
-	padding-right: 10px;
+	/*pour essais border : 1px red solid; */
+	flex:3;
+	margin: 2%;
+
+}
+
+header{
+	padding-bottom: 2%;
+}
+
+article {
 
 }
 
 section h1{
 	font-size: 2em;
-	padding-right: auto;
-border-bottom: 1px #FF7043 solid;
-	  }
+	border-bottom: 1px #FF7043 solid;
+}
 
 ul {
 list-style-type: none;
@@ -73,5 +69,5 @@ li{
 }
 
 .description{
-	margin-left: 300px;
+	margin-left: 330px;
 }
