--- a/style.css
+++ b/style.css
@@ -1,12 +1,6 @@
-﻿html,body{
-	margin:0;
-	padding: 0;
-}
-
-
-body {
-	display: flex;
-
+﻿body {
+width: 900px; 
+margin: auto; 
 }
 
 h1{
@@ -64,6 +58,11 @@ section h1{
 border-bottom: 1px #FF7043 solid;
 	  }
 
+.fas, .far {
+	color:#FF7043;
+	font-size: 0.9em;
+	padding-right: 10px;
+}
 .formation{
 
 	
