--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
-﻿body{
-margin: auto;
+﻿body {
+width: 900px; 
+margin: auto; 
 }
+
 h1{
 	text-transform: uppercase; /* tout en majuscule */
 }
@@ -57,7 +59,16 @@ article {
 
 section h1{
 	font-size: 2em;
-	border-bottom: 1px #FF7043 solid;
+
+.fas, .far {
+	color:#FF7043;
+	font-size: 0.9em;
+	padding-right: 10px;
+}
+.formation{
+
+	
+	  }
 }
 
 ul {
