--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 ﻿/*Général*/
 
 body{
-width: 900px;
+width: 82%;
 margin: auto;
 }
 h1{
@@ -18,6 +18,7 @@ h1{
 /*partie de gauche */
 
 .gauche {
+	
 	padding-top: 30px;
 	background-color: #FF7043;
 	flex:1.5;
@@ -39,6 +40,15 @@ nav h1{
 h3, p  {
 	padding-left: 30px;
 	padding-right: 30px;
+
+}
+
+#loisir .fas {
+	color : white;
+	border : 1px white solid ;
+	border-radius: 100%;
+	font-size: 1.7em;
+	padding: 6px;
 
 }
 
