--- a/style.css
+++ b/style.css
@@ -42,14 +42,18 @@ h3, p  {
 	padding-right: 30px;
 
 }
+nav li {
+	display: inline;
+}
 
 #loisir .fas {
+	font-size: 1.3em;
+	width: 1.2em;
+	height: 1.2em;
 	color : white;
 	border : 1px white solid ;
-	border-radius: 100%;
-	font-size: 1.7em;
-	padding: 6px;
-
+	border-radius: 50%;
+	padding :4%;
 }
 
 /*Partie de droite */
@@ -82,7 +86,10 @@ li{
 	padding:20px;
 }
 
-.fas, .far {
+.point{
+	font-size: 0.4em;
+}
+section .fas,section .far {
 	font-size: 0.9em;
 	color : #FF7043;
 	padding-right: 10px;
