--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
-﻿/*Général*/
+﻿/*Mémo couleurs
+#1995AD : bleu foncé
+#A1D6E2 : bleu clair
+#BCBABE : gris foncé
+#F1F1F2 : gris clair
+*/
+/*Général*/
 
 body{
 width: 82%;
 margin: auto;
 }
+
 h1{
 	text-transform: uppercase; /* tout en majuscule */
 }
@@ -20,7 +27,7 @@ h1{
 .gauche {
 	
 	padding-top: 30px;
-	background-color: #FF7043;
+	background-color: #1995AD;
 	flex:1.5;
 }
 
@@ -33,8 +40,9 @@ h1{
 }
 
 nav h1{
-	background-color: #BDBDBD;
+	background-color: #BCBABE;
 	text-align: center;
+
 }
 
 h3, p  {
@@ -50,11 +58,12 @@ nav li {
 	font-size: 1.3em;
 	width: 1.2em;
 	height: 1.2em;
-	color : white;
-	border : 1px white solid ;
+	color : #BCBABE ;
+	border : 1px #BCBABE solid ;
 	border-radius: 50%;
 	padding :4%;
 }
+
 
 /*Partie de droite */
 
@@ -75,7 +84,7 @@ article {
 
 section h1{
 	font-size: 2em;
-	border-bottom: 1px #FF7043 solid;
+	border-bottom: 1px #1995AD solid;
 }
 
 ul {
@@ -91,7 +100,7 @@ li{
 }
 section .fas,section .far {
 	font-size: 0.9em;
-	color : #FF7043;
+	color : #1995AD;
 	padding-right: 10px;
 }
 
