rajout du contenu dans contact

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-﻿/*Mémo couleurs
+/*Mémo couleurs
 #1995AD : bleu foncé
 #A1D6E2 : bleu clair
 #BCBABE : gris foncé
@@ -117,9 +117,7 @@ ul {
 list-style-type: none;
 }
 
-li{
-	padding:20px;
-}
+
 
 .point{
 	font-size: 0.4em;
