--- a/style.css
+++ b/style.css
@@ -53,22 +53,31 @@ nav h1{
 }
 
 h3, p  {
-	padding-left: 30px;
+	padding-left: ;
 	padding-right: 30px;
 
 }
+
+#loisir{
+	display: flex;
+	justify-content: space-around;
+	padding-left: 0px;
+
+}
 nav li {
-	display: inline;
+	
+	text-decoration: none;
+		
 }
 
 #loisir .fas {
-	font-size: 1.3em;
+	font-size: 2em;
 	width: 1.2em;
 	height: 1.2em;
 	color : #BCBABE ;
 	border : 1px #BCBABE solid ;
 	border-radius: 50%;
-	padding :4%;
+	padding: 12px;
 }
 
 
@@ -77,7 +86,6 @@ nav li {
 .droite{
 	/*pour essais border : 1px red solid; */
 	flex:3;
-
 	margin-left: 5%;
 }
 
@@ -97,17 +105,18 @@ header h1{
 .devel{
 	border-bottom: 1px #1995AD solid;
 }
+
 header h2{
 	font-size: 2em;
 	margin: 0px;
 	
 }
 
-
 /*section*/ 
 .formation{
 	padding-top: 70px;
 }
+
 section h1{
 	font-size: 2em;
 	border-bottom: 1px #1995AD solid;
@@ -117,12 +126,10 @@ ul {
 list-style-type: none;
 }
 
-
-
 .point{
 	font-size: 0.4em;
 }
-section .fas,section .far {
+section .fas, section .far {
 	font-size: 0.9em;
 	color : #1995AD;
 	padding-right: 10px;
