--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ width: 82%;
 margin: auto;
 }
 
-h1{
+h1, h2{
 	text-transform: uppercase; /* tout en majuscule */
 	font-family: 'Open Sans Condensed', sans-serif;
 }
@@ -44,7 +44,7 @@ h1{
 	border-radius: 200%;
 }
 
-nav h1{
+nav h2{
 	background-color: #BCBABE;
 	color: #1995AD;
 	text-align: center;
@@ -53,7 +53,7 @@ nav h1{
 }
 
 h3, p  {
-	padding-left: ;
+	padding-left: 30px ;
 	padding-right: 30px;
 
 }
@@ -117,7 +117,7 @@ header h2{
 	padding-top: 70px;
 }
 
-section h1{
+section h2{
 	font-size: 2em;
 	border-bottom: 1px #1995AD solid;
 }
