--- a/style.css
+++ b/style.css
@@ -8,7 +8,12 @@ choix des polices
 font-family: 'Amatic SC', cursive;
 font-family: 'DM Mono', monospace;
 font-family: 'Open Sans Condensed', sans-serif;
+
+à faire: 
+- vérifier l'espace entre les puces et les h2 de la partie de droite (formation expérience ... ) car pas le meme écart.
+-
 */
+
 /*Général*/
 
 body{
@@ -27,6 +32,7 @@ h1, h2{
 	
  /*flex-direction: column;*/
 }
+
 
 /*partie de gauche */
 
@@ -114,8 +120,15 @@ header h2{
 
 /*section*/ 
 section h2{
-	font-size: 2em;
+	font-size: 2.2em;
 	border-bottom: 1px #1995AD solid;
+	margin-bottom: 0px;
+}
+
+h2 .fas{
+	font-size: 1em;
+	color : #1995AD;
+	padding-right: 30px;
 }
 
 ul {
@@ -125,15 +138,35 @@ ul {
     margin-bottom: 30px;
 }
 
-td{
-	border : 1px solid black;
+table{
+ border-collapse: collapse;
+
 }
+
 .td1{
-	width :150px;
+	padding-top: 50px;
+	width :230px;
 }
 
 .td2{
-	width: 600px;
+	padding-top:50px;
+	font-size: 1.6em;
+	width: 550px;
+}
+
+.td3{
+	display: flex;
+	padding-left: 28px;
+}
+
+.td4{
+	padding-top: 10px;
+	width: 550px;
+}
+
+.td5{
+	display: flex;
+	padding-left: 26px;
 }
 
 td .fas{
@@ -142,6 +175,7 @@ td .fas{
 	padding-right: 16px;
 
 }
+
 td .far {
 	font-size: 0.8em;
 	color : #1995AD;
