--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ h1, h2{
 	flex:1.5;
 }
 
-.imgId{
+img{
 	display: flex;
 	width: 200px;
 	height: 210px; 
@@ -167,7 +167,7 @@ table{
 
 .td5{
 	display: flex;
-	padding-left: 26px;
+	padding-left: 23px;
 }
 
 td .fas{
