--- a/style.css
+++ b/style.css
@@ -98,8 +98,10 @@ a:hover{
 #loisir{
 	display: flex;
 	justify-content: space-around;
-	padding-left: 0px;
+	padding-left: 40px;
+	padding-right: 40px;
 	align-self: flex-end;
+
 }
 
 #loisir .fas {
@@ -110,6 +112,7 @@ a:hover{
 	border : 1px #BCBABE solid ;
 	border-radius: 50%;
 	padding: 12px;
+
 }
 
 
