modification des tailles de la partie de gauche

--- a/style.css
+++ b/style.css
@@ -56,11 +56,14 @@ header{
 	flex: 1.5;
 }
 
-}
+
 header h1{
-	font-size: 3.8em;
-	margin: 0px;
+	font-size: 4.2em;
+	margin : 0px;
+	padding-top: 30px;
+
 }
+
 .prenom{
 	color: #00ACC1;
 }
@@ -71,7 +74,6 @@ header h1{
 header h2{
 	font-size: 2em;
 	margin: 0px;
-	
 }
 
 header img{
@@ -106,21 +108,11 @@ aside h2{
 	text-align: center;
 	font-size: 1.6em;
 	padding: 10px;
-	padding-top: 0px;
 	margin-top: 0px;
 }
 
 
 
-/*les liens*/
-a{
-	color: black;
-	text-decoration: none;
-}
-
-a:hover{
-	color :#B2EBF2 ;
-}
 
 
 #loisir{
@@ -143,6 +135,15 @@ a:hover{
 
 }
 
+/*les liens*/
+a{
+	color: black;
+	text-decoration: none;
+}
+
+a:hover{
+	color :#B2EBF2 ;
+}
 
 /*Partie de droite */
 
@@ -170,7 +171,9 @@ h2 .fas{
 	padding-right: 30px;
 }
 
-
+.formation h2{
+	margin-top: 0px;
+}
 table{
  border-collapse: collapse;
 
@@ -270,7 +273,7 @@ td .far {
 		padding-top: 60px;
 		padding-left: 50px;
 		flex: 3;
-}
+}}
 
 @media all and (min-width: 1024px){
 	aside h3, aside p  {
@@ -302,29 +305,59 @@ td .far {
 		padding-bottom: 50px;
 		padding-top: 50px;
 	}
-	
+	header img{
+	align-self: center;
+	width: 400px;
+	height: 410px; 	
+	border-radius: 200%;
+}
 	.ecrit{
 		text-align: center;
-		padding-top: 60px;
+
 	}
 
 	header h1{
-		font-size: 7em;
+		font-size: 9em;
+		margin-bottom: 0px;
 	}
 
 	header h2{
-		font-size: 3em;
+		font-size: 5em;
 	}
 
 	/*Gauche*/
 
+	.gauche h2{
+		font-size: 5em;
+		margin-bottom: 40px;
+	}
+	.propos, .loisirs{
+		margin-top:40px;
+
+	}
 	.propos p  {
 		padding-left: 30px ;
 		padding-right: 30px;
 		text-align: justify;
-
 	}
 
+	#loisir{
+		display: flex;
+		justify-content: space-around;
+		padding-left: 40px;
+		padding-right: 40px;
+		align-self: flex-end;
+	}
+
+	#loisir .fas {
+		font-size: 4em;
+		width: 1.2em;
+		height: 1.2em;
+		color : #CFD8DC ;
+		border : 1px #CFD8DC solid ;
+		border-radius: 50%;
+		padding: 12px;
+	}
 	/*Droite*/
 	.droite{
 		text-align: center;	
