--- a/style.css
+++ b/style.css
@@ -162,9 +162,11 @@ a:hover{
 	border-bottom: 1px #00ACC1 solid;
 	margin-bottom: 0px;
 }
-.droite td{
+
+.droite p{
 	text-align: justify;
 }
+
 h2 .fas{
 	font-size: 1em;
 	color : #00ACC1;
@@ -174,9 +176,9 @@ h2 .fas{
 .formation h2{
 	margin-top: 0px;
 }
-table{
- border-collapse: collapse;
 
+table{
+ border-collapse: collapse;  /*colle les cellules du tableau */
 }
 
 .td1{
@@ -359,10 +361,27 @@ td .far {
 		padding: 12px;
 	}
 	/*Droite*/
-	.droite{
-		text-align: center;	
-		padding-right: 50px;
+	.droite section h2{
+		text-align: center;
+		font-size: 4em;
+	}
+	.formation{
+		margin-top: 50px;
+	}
+	.td1 {
+		font-size: 2em;
+	}
+	.td2{ 
+		text-align: center;
+	padding-top:30px;
+	font-size: 1.6em;
+	width: 750px;
+	}
 
+	
+
+	.droite p{
+		text-align: justify;
 	}
 
 	.contact{	
