--- a/style.css
+++ b/style.css
@@ -31,7 +31,6 @@ h3,h4{
 
 #conteneur{
 	display: flex;
-
 }
 
 ul {
@@ -109,13 +108,38 @@ header img{
 	background-color: #00ACC1;
 	flex:1.5;
 }
-
+.gauche p, .gauche h3{
+	margin-left: 30px;
+	margin-right: 30px;
+}
 .contact{
 	flex:1;
+	margin-bottom: 30px;
+
 }
+
+.contact p{
+	margin-top: 2px;
+	margin-bottom: 2px;
+}
+
+.contact h2{
+	margin:0px;
+}
+
+.contact h3{
+	margin-top:20px;
+	margin-bottom: 1px;
+}
+
 .propos{
 	flex:5;
 }
+
+.propos p{
+	text-align: justify;
+}
+
 .loisirs{flex:1;
 }
 
@@ -261,4 +285,87 @@ h2 .fas{
 .email{
 	font-size: 0.9em;
 }
+
+	@media all and (max-device-width: 480px){
+		/*GENERAL*/
+		body{
+			width: 100%;
+		}
+
+		#conteneur{
+			display: flex;
+			flex-direction: column;
+		}
+
+		#titre{
+			display: flex;
+			flex-direction: column-reverse;
+		}
+		.img{
+
+			padding-bottom: 50px;
+			padding-top: 50px;
+		}
+		
+		header img{
+			align-self: center;
+			width: 400px;
+			height: 410px; 	
+			border-radius: 200%;
+		}
+
+		.ecrit{
+			text-align: center;
+			margin-left: 0px;
+			padding-bottom: 70px;
+		}
+
+		header h1{
+			font-size: 9em;
+			padding-top: 0px;
+			margin-bottom: 0px;
+		}
+
+		header h2{
+			font-size: 5em;
+		}
+
+		/*GAUCHE*/
+
+		.gauche h2{
+			font-size: 5em;
+			margin-bottom: 40px;
+		}
+
+		.propos, .loisirs{
+			margin-top:40px;
+		}
+
+		.propos p  {
+			padding-left: 30px ;
+			padding-right: 30px;
+			text-align: justify;
+		}
+		.contact{
+			text-align: center;
+		}
+		#loisir{
+			display: flex;
+			justify-content: space-around;
+			padding-left: 40px;
+			padding-right: 40px;
+			align-self: flex-end;
+		}
+
+		#loisir .fas {
+			font-size: 4em;
+			width: 1.2em;
+			height: 1.2em;
+			color : #CFD8DC ;
+			border : 1px #CFD8DC solid ;
+			border-radius: 50%;
+			padding: 12px;
+		}
+
+	}
 
