--- a/style.css
+++ b/style.css
@@ -367,5 +367,58 @@ h2 .fas{
 			padding: 12px;
 		}
 
+		/*DROITE */
+		.droite{
+			margin-left: 0px;
+		}
+		.droite section h2{
+			text-align: center;
+			font-size: 4em;
+		}
+
+		.formation{
+			margin-top: 50px;
+		}
+
+		.liste{
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+		}
+		.date{
+			font-size: 0.9em;
+		}
+		.date .far, .date .far{
+			padding-right: 30px;
+		}
+		.date p{
+			padding-left: 0px;
+		}
+		.liste{
+			text-align: center;
+		}
+		.description h3{
+			font-size:4em;
+	
+		}
+
+		.description h5{
+			font-size: 0.9em;
+
+		}
+		.description p{
+			font-size: 0.9em;
+			padding-left: 20px;
+			padding-right: 20px;
+		}
+
+		#reco{
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+		}
+		.jean,.pierre{
+		
+		}
 	}
 
