--- a/style.css
+++ b/style.css
@@ -466,7 +466,7 @@ h2 .fas{
 			}
 
 			.date{
-				font-size: 1.5em;
+				font-size: 1.8em;
 			}
 			
 			.description h3{
@@ -474,10 +474,11 @@ h2 .fas{
 		
 			}
 			.description h4{
-				font-size: 1.2em;
+				text-decoration: none;
+				font-size: 2.5em;
 			}
 			.description h5{
-				font-size: 1em;
+				font-size: 2em;
 
 			}
 			.description p{
