--- a/style.css
+++ b/style.css
@@ -13,7 +13,11 @@ font-family: 'Open Sans Condensed', sans-serif;
 - vérifier l'espace entre les puces et les h2 de la partie de droite (formation expérience ... ) car pas le meme écart.
 -
 */
-
+@font-face {
+    font-family: 'Open Sans Condensed';
+    src: url('police/OpenSansCondensed-Light.ttf') format('ttf'),
+     
+}
 /*Général*/
 
 body{
@@ -23,7 +27,7 @@ margin: auto;
 
 h1, h2{
 	text-transform: uppercase; /* tout en majuscule */
-	font-family: 'Open Sans Condensed', sans-serif;
+	font-family: 'Open Sans Condensed', arial;
 }
 h3,h4{
 	font-weight: normal;
@@ -53,7 +57,7 @@ a:hover{
 /*header */ 
 
 header{
-	font-family: 'Open Sans Condensed', sans-serif;
+	font-family: 'Open Sans Condensed', arial;
 }
 
 #titre{
@@ -476,7 +480,7 @@ h2 .fas{
 			}
 
 			.date{
-				font-size: 1.8em;
+				font-size: 2em;
 			}
 
 			.description ul{
@@ -498,6 +502,9 @@ h2 .fas{
 			}
 			.description p{
 				font-size: 2em;
+			}
+			.experience ul{
+				margin-top: 5px;
 			}
 
 			#reco{
