--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/*Mémo couleurs
+﻿/*Mémo couleurs
  bleu foncé #00ACC1
  bleu clair #B2EBF2
  gris foncé #CFD8DC
@@ -9,15 +9,20 @@ font-family: 'Amatic SC', cursive;
 font-family: 'DM Mono', monospace;
 font-family: 'Open Sans Condensed', sans-serif;
 
-à faire: 
-- vérifier l'espace entre les puces et les h2 de la partie de droite (formation expérience ... ) car pas le meme écart.
--
+
 */
-@font-face {
-    font-family: 'Open Sans Condensed';
-    src: url('police/OpenSansCondensed-Light.ttf') format('ttf'),
-     
+@font-face
+{
+    font-family: 'Dayrom';
+    src: url('polices/Dayrom');
+    src: url('polices/Dayrom.eot?#iefix') format('embedded-opentype'),
+         url('polices/Dayrom.woff') format('woff'),
+         url('polices/Dayrom.ttf') format('truetype'),
+         url('polices/Dayrom.svg#BallparkWeiner') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
+
 /*Général*/
 
 body{
@@ -27,8 +32,9 @@ margin: auto;
 
 h1, h2{
 	text-transform: uppercase; /* tout en majuscule */
-	font-family: 'Open Sans Condensed', arial;
+	font-family: 'Dayrom';
 }
+
 h3,h4{
 	font-weight: normal;
 }
@@ -56,9 +62,6 @@ a:hover{
 
 /*header */ 
 
-header{
-	font-family: 'Open Sans Condensed', arial;
-}
 
 #titre{
 	display: flex;
@@ -79,7 +82,7 @@ header{
 }
 
 header h1{
-	font-size: 4.2em;
+	font-size: 3.5em;
 	margin : 0px;
 	padding-top: 30px;
 
@@ -188,7 +191,7 @@ aside h2{
 
 /*section*/ 
 .droite section h2{
-	font-size: 2.2em;
+	font-size: 2em;
 	border-bottom: 1px #00ACC1 solid;
 	margin-bottom: 0px;
 	margin-top: 20px;
@@ -248,20 +251,26 @@ h2 .fas{
 }
 
 .description h3{
+	text-transform: uppercase;
 	margin: 0px;
-	font-size: 1.6em;
+	font-size: 1.3em;
 }
 
 .description h4{
-	font-size: 1.2em;
+	font-size: 1em;
 	margin-top: 10px;
 	margin-bottom: 0px;
 	padding: 0px;
-	text-decoration: underline;
+
 }
 
 .description h5{
 	font-size: 1em;
+	margin-top: 10px;
+	margin-bottom: 0px;
+}
+
+.description p{
 	margin-top: 10px;
 	margin-bottom: 0px;
 }
@@ -338,10 +347,6 @@ h2 .fas{
 
 				padding-top: 0px;
 				margin-bottom: 0px;
-			}
-
-			header h2{
-
 			}
 
 			/*GAUCHE*/
