--- a/style.css
+++ b/style.css
@@ -29,9 +29,9 @@ width: 82%;
 margin: auto;
 }
 
-h1, h2{
+h1,.gauche h2, .droite h2{
 	text-transform: uppercase; /* tout en majuscule */
-	font-family: 'Dayrom';
+	font-family: 'Dayrom';	
 }
 
 h3,h4{
@@ -67,8 +67,8 @@ a:hover{
 
 }
 .img{
-	padding-top: 50px;
-	padding-bottom: 50px;
+	padding-top: 40px;
+	padding-bottom: 30px;
 	text-align: center;
 	background-color: #00ACC1; 
 	flex: 1.5;
@@ -84,7 +84,6 @@ header h1{
 	font-size: 3.5em;
 	margin : 0px;
 	padding-top: 30px;
-
 }
 
 .prenom{
@@ -97,6 +96,7 @@ header h1{
 header h2{
 	font-size: 2em;
 	margin: 0px;
+	font-family: 'Dayrom';
 }
 
 header img{
@@ -190,7 +190,8 @@ aside h2{
 
 /*section*/ 
 .droite section h2{
-	font-size: 2em;
+	font-size: 1.7em;
+	padding-bottom: 10px;
 	border-bottom: 1px #00ACC1 solid;
 	margin-bottom: 0px;
 	margin-top: 20px;
@@ -198,7 +199,7 @@ aside h2{
 
 
 h2 .fas{
-	font-size: 1em;
+	font-size: 1.3em;
 	color : #00ACC1;
 	padding-right: 30px;
 }
