--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ header img{
 	margin-left: 30px;
 	margin-right: 30px;
 }
+
 .contact{
 	flex:1;
 	margin-bottom: 30px;
@@ -124,10 +125,12 @@ header img{
 }
 
 .contact h3{
+	font-size: 1.6em;
 	margin:0px;
 }
 
 .contact h4{
+	font-size : 1.2em;
 	margin-top:20px;
 	margin-bottom: 1px;
 }
@@ -223,11 +226,8 @@ h3 .fas{
 	flex:2;
 }
 
-.date h4{
+time{
 	font-size: 1.1em;
-	padding: 0px;
-	margin: 0px;
-	font-weight: normal;
 }
 
 .date p{
@@ -344,7 +344,7 @@ h3 .fas{
 
 			/*GAUCHE*/
 
-			.gauche h2{
+			.gauche h3{
 		
 				margin-bottom: 40px;
 			}
@@ -383,7 +383,7 @@ h3 .fas{
 			.droite{
 				margin-left: 0px;
 			}
-			.droite section h2{
+			.droite section h3{
 				text-align: center;
 				margin-left: 30px;
 				margin-right: 30px;
@@ -439,39 +439,17 @@ h3 .fas{
 
 
 			header h1{
-				font-size: 3em;
-
+				font-size: 2.5em;
 			}
 
-			header h2{
-
-			}
 
 			/*GAUCHE*/
 
-			.gauche h2{
-				font-size: ;
-			}
+		
 			.contact{
 				margin-bottom: 0px;
 			}
-			.contact h3{
-				font-size: ;
-				} 
-			.contact p{
-				font-size:;
-			}
-
-
-			.propos p  {
-				font-size: ;
-			}
-
 			
-			#loisir .fas {
-				font-size: ;
-	
-			}
 
 			/*DROITE */
 
@@ -482,14 +460,10 @@ h3 .fas{
 			h2 .fas{
 				padding-right: 15px;
 			}
-			.date{
-				font-size: ;
-			}
+			
 
 			.description ul{
 				list-style-type: none;
-				font-size: ;
-	
 			}
 			.description h3{
 				font-size:1.2em;
@@ -497,23 +471,7 @@ h3 .fas{
 			}
 			.description h4{
 				text-decoration: none;
-				font-size: ;
 			}
-			.description h5{
-				font-size: ;
-
-			}
-			.description p{
-				font-size: ;
-			}
-			.experience ul{
-				margin-top: ;
-			}
-
-			#reco{
-				font-size: ;
-			}
-
-
+			
 		}
 
